--- a/frontend/src/Pages/Plans/forms/form.css
+++ b/frontend/src/Pages/Plans/forms/form.css
@@ -1,64 +1,61 @@
-/* form.css */
+/* Update the styles in your form.css file */
 
 .container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f8f8f8;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  label {
-    margin-bottom: 15px;
-  }
-  
-  h3 {
-    font-size: 1.2rem;
-    margin-bottom: 5px;
-  }
-  
-  p {
-    font-size: 0.8rem;
-    color: #888;
-    margin-bottom: 10px;
-  }
-  
-  select,
-  input {
-    width: 100%;
-    padding: 10px;
-    margin-top: 5px;
-    margin-bottom: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  
-  #container-special {
-    resize: vertical;
-  }
-  
-  footer {
-    margin-top: 20px;
-  }
-  
-  #order-button {
-    padding: 10px 20px;
-    background-color: #4caf50;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-  }
-  
-  #order-button:hover {
-    background-color: #45a049;
-  }
-  
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f8f8f8;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.container h3 {
+  font-size: 1.2rem;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+.container p {
+  font-size: 1rem;
+  margin-bottom: 10px;
+  color: #666;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  margin-bottom: 15px;
+}
+
+select {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  margin-top: 5px;
+}
+
+footer {
+  margin-top: 20px;
+}
+
+#order-button {
+  font-size: 1rem;
+  padding: 10px 20px;
+  background-color: #bf6600;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#order-button:hover {
+  background-color: #ce6f02;
+}
+
+/* Add additional styles for handling error messages if needed */
