--- a/frontend/src/Components/navbar.css
+++ b/frontend/src/Components/navbar.css
@@ -1,63 +1,125 @@
-/* Navbar.css */
+.app__navbar {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: orangered;
+  padding: 1rem 2rem;
+}
 
-  .navbar {
-    background-color: #bf6600; 
-    padding: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .nav-container {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  
-  .logo {
-    font-size: 1.5rem;
-    color: #fff; /* White text */
-    font-weight: bold;
-    text-decoration: none;
-  }
-  
-  .nav-links {
-    list-style: none;
-    display: flex;
-    gap: 0px; /* Adjust the gap as needed */
-    margin: 5; /* Remove default margin */
-    padding: 5; /* Remove default padding */
-  }
-  
-  .nav-links li {
-    margin: 0;
-    padding: 0;
-  }
-  
-  .nav-links a {
-    text-decoration: none;
-    color: #fff; 
-    font-weight: bold;
-    transition: color 0.3s ease;
-  }
-  
-  .nav-links a:hover {
-    color: #000000; 
+.app__navbar-logo {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.app__navbar-logo img {
+  width: 150px;
+}
+
+.app__navbar-links {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  list-style: none;
+}
+
+.app__navbar-links li {
+  margin: 0 1rem;
+  cursor: pointer;    
+}
+
+.app__navbar-links li:hover {
+  color: #302f2f;
+}
+
+.app__navbar-login {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.app__navbar-login a {
+ margin: 0 1rem;
+ text-decoration: none;
+ transition: all 0.5s ease;
+}
+
+.app__navbar-login a:hover {
+  color: #302f2f;
+}
+
+.app__navbar-smallscreen {
+  display: none;
+}
+
+.app__navbar-smallscreen_overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: orangered;
+  transition: 0.5s ease;
+
+  flex-direction: column;
+  z-index: 5;
+}
+
+.app__navbar-smallscreen_overlay .overlay__close {
+  font-size: 27px;
+  color: #302f2f;
+  cursor: pointer;
+
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.app__navbar-smallscreen_links {
+  list-style: none;
+}
+
+.app__navbar-smallscreen_links li {
+  margin: 2rem;
+  cursor: pointer;
+  color: #ffffff;
+  font-size: 2rem;
+  text-align: center;
+}
+
+.app__navbar-smallscreen_links li:hover {
+  color: #302f2f;
+}
+
+@media screen and (max-width: 2000px) {
+ .app__navbar-logo img {
+       width: 210px;
+ }
+}
+
+@media screen and (max-width: 1150px) {
+  .app__navbar-links {
+      display: none;
   }
 
-  .login-btn {
-    background-color:  #bf6600; 
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    font-weight: bold;
-    transition: background-color 0.3s ease;
-    margin-left: auto;
+  .app__navbar-smallscreen {
+      display: flex;
   }
-  
-  .login-btn:hover {
-    color: #000000; 
-  }
-  
+}
+
+@media screen and (max-width: 650px) {
+ .app__navbar {
+      padding: 1rem;
+ }
+
+ .app__navbar-login {
+      display: none;
+ }
+
+ .app__navbar-logo img {
+      width: 110px;
+ }
+}
