--- a/frontend/src/Pages/Home/home.css
+++ b/frontend/src/Pages/Home/home.css
@@ -1,8 +1,4 @@
-.app__header {
-  background-color: white;
-}
-
-.app__header-h1 {
+.app__gallery-content h1 {
   font-family: var(--font-base);
   letter-spacing: 0.04rem;
   text-transform: uppercase;
@@ -10,13 +6,24 @@
   font-size: 70px;
 }
 
-.app__header-img img {
-  width: 80%
+.app__gallery {
+  flex-direction: row;
+  padding: 4rem 0 4rem 6rem;
 }
 
-.app__gallery {
+.app__gallery-content {
+  flex: 1;
   display: flex;
-  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+
+  min-width: 500px;
+  padding-right: 2rem;
+}
+
+.app__gallery-content button {
+  margin-top: 1rem;
 }
 
 .app__gallery-images {
@@ -33,7 +40,7 @@
   width: max-content;
   overflow-x: scroll;
   -ms-overflow-style: none;
-  scrollbar-width: none;
+  scrollbar-width: none;  
 }
 
 .app__gallery-images_container::-webkit-scrollbar {
@@ -49,10 +56,10 @@
 
 .gallery__image-icon {
   position: absolute;
-  color: black;
+  color: #fff;
   font-size: 2rem;
-  opacity: 0.5;
-  transition: 0.5s ease;
+  opacity: 0;
+  transition: .5s ease;
   cursor: pointer;
 }
 
@@ -61,11 +68,11 @@
   height: 100%;
   object-fit: cover;
   opacity: 1;
-  transition: 0.5s ease;
+  transition: .5s ease;
 }
 
 .app__gallery-images_card:hover img {
-  opacity: 0.35;
+  opacity: .35;
 }
 
 .app__gallery-images_card:hover .gallery__image-icon {
@@ -77,27 +84,37 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
   padding: 0 1rem;
   position: absolute;
   bottom: 5%;
 }
 
 .gallery__arrow-icon {
-  color: orangered;
+  color: var(--color-golden);
   font-size: 2rem;
   cursor: pointer;
-  background-color: white;
+  background: var(--color-black);
   border-radius: 5px;
 }
 
 .gallery__arrow-icon:hover {
-  color: var(--color-black)
+  color: var(--color-white);
 }
 
-@media screen and (max-width: 2000px) {
+@media screen and (min-width: 2000px) {
+  .app__gallery-content button {
+      margin-top: 2rem;
+  }
+
+  .app__gallery-content {
+      min-width: 1000px;
+      padding-right: 4rem;
+  }
+
   .app__gallery-images_card {
       min-width: 400px;
-      height: 550px;
+      height: 547px;
   }
 }
 
@@ -121,6 +138,10 @@
 @media screen and (max-width: 650px) {
   .app__gallery {
       padding: 4rem 0 4rem 2rem;
+  }  
+  
+  .app__gallery-content {
+      min-width: 100%;
   }
 
   .app__gallery-images_card {
