--- a/frontend/src/Components/Form/form.css
+++ b/frontend/src/Components/Form/form.css
@@ -68,9 +68,9 @@ footer {
 }
 
 .app__form-subcontainer {
-  flex: 1; /* Take up remaining space */
-  padding: 25px; /* Adjust padding as needed */
-  margin-left: 100px; /* Add margin to separate form and subcontainer */
+  flex: 1; 
+  padding: 25px; 
+  margin-left: 100px; 
   background-color: #f8f8f8;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -83,21 +83,28 @@ footer {
   color: black;
 }
 
-.app__form-subcontainer p {
+.app__form-subcontainer li {
+  flex-direction: column;
+  font-weight: bold;
   color: grey;
 }
 
 .subcontainer-total {
-  margin-top: 450px;
+  position: absolute;
+  right:    0;
+  bottom:   0;
+  margin-bottom: 25px;
+  margin-right: 25px;
   color: black;
 }
 
 #subcontainer__submit-button {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 35px;
   font-size: 1rem;
   padding: 10px 40px;
   background-color: orangered;
-  margin-left: 40px;
-  margin-bottom: 15px;
   color: white;
   border: 1px solid orangered;
   border-radius: 10px;
